creating a login page

--- a/first-angular-project/src/app/app.component.html
+++ b/first-angular-project/src/app/app.component.html
@@ -1,5 +1,16 @@
-<h3> this is the new angular page</h3>
+<div class='container'>
+    <div class='row'>
+        <div class="col-xs-12">
 
-<hr>
+            <h3> This is the new angular page</h3>
+            <hr>
+            <!-- <app-servers></app-servers> -->
 
-<app-server></app-server>
+            <app-login></app-login>
+            <!-- <div app-servers></div> -->
+            <!-- <div class="app-servers" style="color: chartreuse;"></div> -->
+
+        </div>
+    </div>
+</div>
+
