learning the bindings

--- a/first-angular-project/src/app/app.component.html
+++ b/first-angular-project/src/app/app.component.html
@@ -4,11 +4,10 @@
 
             <h3> This is the new angular page</h3>
             <hr>
-            <!-- <app-servers></app-servers> -->
 
             <app-login></app-login>
-            <!-- <div app-servers></div> -->
-            <!-- <div class="app-servers" style="color: chartreuse;"></div> -->
+            <div app-servers></div>
+            <div class="app-login" style="color: chartreuse;"></div>
 
         </div>
     </div>
