--- a/first-angular-project/src/app/login/login.component.html
+++ b/first-angular-project/src/app/login/login.component.html
@@ -1,23 +1,30 @@
 <h3> This is a login page</h3>
+<form> 
+  <p> {{ message }}</p>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" 
+    (input)='onUpdateServerName($event)'>
+    <div>"{{serverName}}"</div>
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
+  
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
 
-<div class="row">
-    <div class="mb-3">
-            <h3>Sign Up for Free</h3>
-                <form>
-                    <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" ngModelOptions]="{standalone: true}" [(ngModel)]="email" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="exampleInputPassword1" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <button type="button" class="btn btn-primary" (click)="registerResults()">submit</button>
-            </form>
-        </div>
-</div> 
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1" [(ngModel)]="thePass">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Re-enter Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="{{thePass}}">
+  </div>
+
+  <hr>
+
+  <button type="submit" class="btn btn-primary" [disabled]='!AllowNewServer' (click)='login()'>Submit</button>
+</form>
