--- a/first-angular-project/src/app/login/login.component.html
+++ b/first-angular-project/src/app/login/login.component.html
@@ -16,12 +16,13 @@
 
   <div class="mb-3 form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1" [(ngModel)]="thePass">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    <label class="form-check-label" for="exampleCheck1" name='pass'>Check me out</label>
+    <p>{{thePass}}</p>
   </div>
   
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Re-enter Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="{{thePass}}">
+    <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="thePass">
   </div>
 
   <hr>
