trying to make formcontrol

--- a/first-angular-project/src/app/app.component.html
+++ b/first-angular-project/src/app/app.component.html
@@ -5,7 +5,8 @@
             <h3> This is the new angular page</h3>
             <hr>
 
-            <app-login></app-login>
+            <!-- <app-login></app-login> -->
+            <router-outlet></router-outlet>
             <div app-servers></div>
             <div class="app-login" style="color: chartreuse;"></div>
 
