creating the new home page and clearing things up to work

--- a/first-angular-project/src/app/app.component.html
+++ b/first-angular-project/src/app/app.component.html
@@ -4,6 +4,7 @@
 
             <h3> This is the new angular page</h3>
             <hr>
+            <a routerLink = "/login" reouterLinkActive = "active"><button class="btn btn-success" > Login to your account!</button></a>
 
             <!-- <app-login></app-login> -->
             <router-outlet></router-outlet>
