cleaning up the task

--- a/first-angular-project/src/app/app.component.html
+++ b/first-angular-project/src/app/app.component.html
@@ -4,12 +4,10 @@
 
             <h3> This is the new angular page</h3>
             <hr>
-            <a routerLink = "/login" reouterLinkActive = "active"><button class="btn btn-success" > Login to your account!</button></a>
-
-            <!-- <app-login></app-login> -->
+       
             <router-outlet></router-outlet>
-            <div app-servers></div>
-            <div class="app-login" style="color: chartreuse;"></div>
+            <!-- <div app-servers></div>
+            <div class="app-login" style="color: chartreuse;"></div> -->
 
         </div>
     </div>
