--- a/first-angular-project/src/app/homepage/homepage.component.html
+++ b/first-angular-project/src/app/homepage/homepage.component.html
@@ -1,3 +1,6 @@
 <h3> Welcome to our homepage!</h3>
 
-<img src="../homepage/welcome.jpg" width="20" height="20">
+<img src="../assets/pictures/homepage/welcome.jpg" width="500" height="500">
+
+<hr>
+<a routerLink = "/login" reouterLinkActive = "active" (click)='logout()'><button class="btn btn-danger" > Logout</button></a>
