--- a/first-angular-project/src/app/login/login.component.html
+++ b/first-angular-project/src/app/login/login.component.html
@@ -8,7 +8,7 @@
 
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input formControlName="emailinfo" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" 
+    <input formControlName="emailinfo" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Example@email.com"
     (input)='onUpdateServerName($event)'>
     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
   </div>
@@ -21,7 +21,7 @@
   
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Re-enter Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" name="secondpass">
+    <input formControlName="repassinfo" type="password" class="form-control" id="exampleInputPassword1" name="secondpass">
   </div>
 
   <hr>
@@ -30,5 +30,5 @@
 
   <p *ngIf="message"> The account was created with the email of {{ serverName }}</p>
 
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
 </form>
