working ont he task

--- a/first-angular-project/src/app/homepage/homepage.component.html
+++ b/first-angular-project/src/app/homepage/homepage.component.html
@@ -1,6 +1,10 @@
-<h3> Welcome to our homepage!</h3>
+<h2> Welcome to our homepage!</h2>
 
 <img src="../assets/pictures/homepage/welcome.jpg" width="500" height="500">
+<br>
+<h3>Who would you like to play with?</h3>
 
+<!-- List e user ha -->
+<button type='button' class='btn btn-warning'(click)=''>Show all playeres</button>
 <hr>
 <a routerLink = "/login" reouterLinkActive = "active" (click)='logout()'><button class="btn btn-danger" > Logout</button></a>
