--- a/first-angular-project/src/app/login/login.component.html
+++ b/first-angular-project/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 
 <form [formGroup]="account"> 
   <div>
-    <label> Full name</label>
+    <label> Username</label>
     <input formControlName="nameinfo" type="text" class="form-control">
   </div>
 
@@ -26,7 +26,7 @@
 
   <hr>
 
-  <a routerLink = "/homepage" reouterLinkActive = "active"><button type="submit" class="btn btn-primary" [disabled]="account.invalid" (click)='login()'>Submit</button></a>
+  <button type="submit" class="btn btn-primary" [disabled]="account.invalid" (click)='login()'>Submit</button>
 
   <p *ngIf="message"> The account was created with the email of {{ serverName }}</p>
 
