cleaning up the user list

--- a/first-angular-project/src/app/homepage/homepage.component.html
+++ b/first-angular-project/src/app/homepage/homepage.component.html
@@ -6,16 +6,11 @@
 
 <!-- List e user ha -->
 <button type='button' class='btn btn-warning' (click)='getUser()'>Show all playeres</button>
-<hr>
-
 <ul *ngIf="users && users.length>0">
     <li *ngFor="let user of users">
-        <strong>Username:</strong>  {{user.username}}, <br>
-        <strong>number:</strong>  {{user.phone}},<br>
-        <!-- <strong>Age: </strong> {{user.age}}, <br> -->
-        <strong>email:</strong>  {{user.email}}
+       <a ><strong> {{user.username}}</strong> </a> 
     </li>
 </ul>
 
-
+<hr>
 <a routerLink = "/login" reouterLinkActive = "active" (click)='logout()'><button class="btn btn-danger" > Logout</button></a>
