--- a/first-angular-project/src/app/homepage/homepage.component.html
+++ b/first-angular-project/src/app/homepage/homepage.component.html
@@ -16,3 +16,4 @@
 
 <hr>
 <button routerLink = "/login" reouterLinkActive = "active" (click)='logout()' class="btn btn-danger" > Logout</button>
+<!-- <a routerLink = "/login" reouterLinkActive = "active" (click)='logout()'><button class="btn btn-danger" > Logout</button></a> -->
